[gd_scene load_steps=7 format=3 uid="uid://bxqhwycjwdq8v"]

[ext_resource type="Texture2D" uid="uid://c804p0l5twdor" path="res://assets/visual/ui/menu_background.png" id="1_sxagu"]
[ext_resource type="FontFile" uid="uid://bspmm0n21y6lk" path="res://assets/visual/ui/fonts/Adventurer.ttf" id="2_5vocl"]
[ext_resource type="Script" path="res://scripts/codex.gd" id="2_ibv07"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aye8x"]
bg_color = Color(0.729412, 0.4, 0.419608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 3
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rg7j"]
bg_color = Color(0.301961, 0.152941, 0.215686, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 2
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rauj"]
bg_color = Color(0.521569, 0.290196, 0.384314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 2
shadow_offset = Vector2(1, 1)

[node name="Codex" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sxagu")
script = ExtResource("2_ibv07")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.886275, 0.513726, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_5vocl")
theme_override_font_sizes/font_size = 67
text = "Codex"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 460)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aye8x")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="ElementPanel" type="Panel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6rg7j")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/ElementPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="EntryList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/ElementPanel/MarginContainer"]
layout_mode = 2

[node name="DescriptionPanel" type="Panel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7rauj")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DescriptionTable" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel/MarginContainer"]
layout_mode = 2

[node name="ElementName" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel/MarginContainer/DescriptionTable"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5vocl")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Image" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel/MarginContainer/DescriptionTable"]
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 3

[node name="Container" type="Container" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel/MarginContainer/DescriptionTable"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Description1" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel/MarginContainer/DescriptionTable"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.776471, 0.839216, 1)
theme_override_fonts/font = ExtResource("2_5vocl")
theme_override_font_sizes/font_size = 14
autowrap_mode = 2

[node name="Container2" type="Container" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel/MarginContainer/DescriptionTable"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Description2" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel/MarginContainer/DescriptionTable"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5vocl")
theme_override_font_sizes/font_size = 14
autowrap_mode = 2

[node name="Description3" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel/MarginContainer/DescriptionTable"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5vocl")
theme_override_font_sizes/font_size = 14

[node name="Description4" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel/MarginContainer/DescriptionTable"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5vocl")
theme_override_font_sizes/font_size = 14

[node name="Description5" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer/DescriptionPanel/MarginContainer/DescriptionTable"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5vocl")
theme_override_font_sizes/font_size = 14
autowrap_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5vocl")
text = "Press esc to go back to menu"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
